--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -10,6 +10,7 @@
         top: 0;
         left: 0;
         width: 100%;
+        -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
         overflow: hidden;
         border-radius: 3px;
@@ -47,12 +48,31 @@
         border-top-right-radius: 3px;
         &--1 {
             background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url('../img/nat-5.jpg');
+
+            @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em){
+                background-image: linear-gradient( to right bottom, rgba($color-secondary-light, 0.8), 
+                rgba($color-secondary-dark, 0.8)), 
+                url(../img/nat-5.jpg);
+        
+            }
         }
         &--2 {
             background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), url('../img/nat-6.jpg');
+            @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em){
+                background-image: linear-gradient( to right bottom, rgba($color-primary-light, 0.8), 
+                rgba($color-primary-dark, 0.8)), 
+                url(../img/nat-6.jpg);
+        
+            }
         }
         &--3 {
             background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), url('../img/nat-7.jpg');
+            @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em){
+                background-image: linear-gradient( to right bottom, rgba($color-tertiary-light, 0.8), 
+                rgba($color-tertiary-dark, 0.8)), 
+                url(../img/nat-7.jpg);
+        
+            }
         }
     }
     &__heading {
@@ -116,5 +136,42 @@
     &__price-value {
         font-size: 6rem;
         font-weight: 100;
+    }
+    // media query for card
+    @include respond(tab-port) {
+        height: auto;
+        border-radius: 3px;
+        background-color: $color-white;
+        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+        &__side {
+            height: auto;
+            position: relative;
+            box-shadow: none;
+            &--back {
+                transform: rotateY(0);
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+            }
+        }
+        &:hover &__side--front {
+            transform: rotateY(0);
+        }
+        &__details {
+            padding: 1rem 3rem;
+        }
+        //BACK SIDE CARD
+        &__cta {
+            position: relative;
+            top: 0%;
+            left: 0%;
+            transform: translate(0);
+            width: 100%;
+            padding: 7rem 4rem 4rem 4rem;
+        }
+        &__price-box {
+            margin-bottom: 3rem;
+        }
+        &__price-value {
+            font-size: 4rem;
+        }
     }
 }
