--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -6,6 +6,9 @@
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
     transition: transform .3s;
+    @include respond(tab-port) {
+        padding: 2rem;
+    }
     &__icon {
         color: $color-primary;
         font-size: 6rem;
@@ -14,6 +17,9 @@
         display: inline-block;
         -webkit-background-clip: text;
         color: transparent;
+        @include respond(tab-port) {
+            margin-bottom: 0;
+        }
     }
     &:hover {
         transform: translateY(-1.5rem) scale(1.03);
