--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -14,6 +14,9 @@
         width: 90%;
         display: block;
         transition: all .3s;
+        @include respond(tab-port) {
+            width: 100%;
+        }
         &:focus {
             outline: none;
             border-bottom: 3px solid $color-primary;
@@ -42,6 +45,10 @@
     &__radio-group {
         width: 48%;
         display: inline-block;
+        @include respond(tab-port) {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
     &__radio-input {
         display: none;
