--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,9 +3,15 @@
     font-size: 1.4rem;
     color: $color-grey-light-1;
     padding: 10rem 0;
+    @include respond(tab-port) {
+        padding: 8rem 0;
+    }
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
+        @include respond(tab-port) {
+            margin-bottom: 5rem;
+        }
     }
     &__logo {
         width: 15rem;
@@ -15,6 +21,10 @@
         border-top: 1px solid $color-grey-dark;
         padding-top: 2rem;
         display: inline-block;
+        @include respond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
     }
     &__list {
         list-style: none;
@@ -49,5 +59,9 @@
         width: 70%;
         letter-spacing: 2px;
         font-size: 1.5rem;
+        @include respond(tab-port) {
+            width: 100%;
+            float: none;
+        }
     }
 }
