--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,9 @@
     background-color: $color-grey-light-1;
     padding: 25rem 0;
     margin-top: -20vh;
+    @include respond(tab-port) {
+        padding: 25rem 0;
+    }
 }
 
 .section-features {
@@ -13,22 +16,41 @@
     &>* {
         transform: skewY(7deg);
     }
+
+    @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em){
+        background-image: linear-gradient( to right bottom, rgba($color-primary-light, 0.8), 
+        rgba($color-primary-dark, 0.8)), 
+        url(../img/hero.jpg);
+
+    }
+    @include respond(tab-port) {
+        padding: 10rem 0;
+    }
 }
 
 .section-tours {
     background-color: $color-grey-light-1;
     padding: 25rem 0 15rem 0;
     margin-top: -10rem;
+    @include respond(tab-port) {
+        padding: 20rem 0 10rem 0;
+    }
 }
 
 .section-stories {
     position: relative;
     padding: 15rem 0;
+    @include respond(tab-port) {
+        padding: 10rem 0;
+    }
 }
 
 .section-book {
     padding: 15rem 0;
     background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+    @include respond(tab-port) {
+        padding: 10rem 0;
+    }
 }
 
 .book {
@@ -36,9 +58,22 @@
     background-image: linear-gradient(105deg, rgba($color-white, .9) 0%, rgba($color-white, .9) 50%, transparent 50%), url(/img/nat-10.jpg);
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
-    height: 50rem;
+    // height: 50rem;
+    @include respond(tab-land) {
+        background-image: linear-gradient(105deg, rgba($color-white, .9) 0%, rgba($color-white, .9) 65%, transparent 65%), url(/img/nat-10.jpg);
+        background-size: cover;
+    }
+    @include respond(tab-port) {
+        background-image: linear-gradient(to right, rgba($color-white, .9) 0%, rgba($color-white, .9) 100%), url(/img/nat-10.jpg);
+    }
     &__form {
         width: 50%;
         padding: 6rem;
+        @include respond(tab-land) {
+            width: 70%;
+        }
+        @include respond(tab-port) {
+            width: 100%;
+        }
     }
 }
