--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -526,6 +526,10 @@ body {
     body {
       padding: 0; } }
 
+::selection {
+  background-color: #c70c0c;
+  color: #fff; }
+
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
@@ -864,7 +868,7 @@ body {
   .card__price-value {
     font-size: 6rem;
     font-weight: 100; }
-  @media (max-width: 56.25em) {
+  @media (max-width: 56.25em), (hover: none) {
     .card {
       height: auto;
       border-radius: 3px;
