--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -80,6 +80,10 @@ body {
     body {
       padding: 0; } }
 
+::selection {
+  background-color: #c70c0c;
+  color: #fff; }
+
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
@@ -418,7 +422,7 @@ body {
   .card__price-value {
     font-size: 6rem;
     font-weight: 100; }
-  @media (max-width: 56.25em) {
+  @media (max-width: 56.25em), (hover: none) {
     .card {
       height: auto;
       border-radius: 3px;
