--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,9 +8,9 @@ Dark red: #830707
 */
 
 // COLOURS 
-$color-primary: #c70c0c;
-$color-primary-dark: #6b0e01;
-$color-primary-light: #f39b84;
+$color-primary: #f70f50;
+$color-primary-dark: rgb(173, 9, 69);
+$color-primary-light: rgb(255, 123, 156);
 $color-secondary-light: #7ed56f;
 $color-secondary-dark: #28b485;
 $color-tertiary-light: #2998ff;
