--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -527,7 +527,7 @@ body {
       padding: 0; } }
 
 ::selection {
-  background-color: #c70c0c;
+  background-color: #f70f50;
   color: #fff; }
 
 body {
@@ -573,7 +573,7 @@ body {
   text-transform: uppercase;
   font-weight: 900;
   letter-spacing: .3rem;
-  background-image: linear-gradient(to right, #f39b84, #6b0e01);
+  background-image: linear-gradient(to right, #ff7b9c, #ad0945);
   display: inline-block;
   -webkit-background-clip: text;
   color: transparent;
@@ -655,10 +655,10 @@ body {
     background-color: #fff; }
 
 .btn--red {
-  background-color: #c70c0c;
+  background-color: #f70f50;
   color: #fff; }
   .btn--red::after {
-    background-color: #c70c0c; }
+    background-color: #f70f50; }
 
 .btn::after {
   content: "";
@@ -678,16 +678,16 @@ body {
 
 .btn-text:link, .btn-text:visited {
   font-size: 1.6rem;
-  color: #c70c0c;
+  color: #f70f50;
   padding: 3px;
   text-decoration: none;
-  border-bottom: 1px solid #c70c0c;
+  border-bottom: 1px solid #f70f50;
   display: inline-block;
   transition: all .2s; }
 
 .btn-text:hover {
   color: #fff;
-  background-color: #c70c0c;
+  background-color: #f70f50;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
   transform: translateY(-2px); }
 
@@ -735,7 +735,7 @@ body {
           transform: scale(1.1); } }
     .composition__photo:hover {
       transform: scale(1.05) translateY(-0.5rem);
-      outline: 1.5rem solid #f39b84;
+      outline: 1.5rem solid #ff7b9c;
       outline-offset: 2rem;
       z-index: 20;
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.6); }
@@ -754,10 +754,10 @@ body {
     .feature-box {
       padding: 2rem; } }
   .feature-box__icon {
-    color: #c70c0c;
+    color: #f70f50;
     font-size: 6rem;
     margin-bottom: .5rem;
-    background-image: linear-gradient(to right, #f39b84, #6b0e01);
+    background-image: linear-gradient(to right, #ff7b9c, #ad0945);
     display: inline-block;
     -webkit-background-clip: text;
     color: transparent; }
@@ -791,7 +791,7 @@ body {
       .card__side--back-1 {
         background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
       .card__side--back-2 {
-        background-image: linear-gradient(to right bottom, #f39b84, #6b0e01); }
+        background-image: linear-gradient(to right bottom, #ff7b9c, #ad0945); }
       .card__side--back-3 {
         background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
   .card:hover .card__side--front {
@@ -812,10 +812,10 @@ body {
         .card__picture--1 {
           background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/nat-5.jpg); } }
     .card__picture--2 {
-      background-image: linear-gradient(to right bottom, #f39b84, #6b0e01), url("../img/nat-6.jpg"); }
+      background-image: linear-gradient(to right bottom, #ff7b9c, #ad0945), url("../img/nat-6.jpg"); }
       @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
         .card__picture--2 {
-          background-image: linear-gradient(to right bottom, rgba(243, 155, 132, 0.8), rgba(107, 14, 1, 0.8)), url(../img/nat-6.jpg); } }
+          background-image: linear-gradient(to right bottom, rgba(255, 123, 156, 0.8), rgba(173, 9, 69, 0.8)), url(../img/nat-6.jpg); } }
     .card__picture--3 {
       background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url("../img/nat-7.jpg"); }
       @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
@@ -838,7 +838,7 @@ body {
     .card__heading-span--1 {
       background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.85), rgba(40, 180, 133, 0.85)); }
     .card__heading-span--2 {
-      background-image: linear-gradient(to right bottom, rgba(243, 155, 132, 0.85), rgba(107, 14, 1, 0.85)); }
+      background-image: linear-gradient(to right bottom, rgba(255, 123, 156, 0.85), rgba(173, 9, 69, 0.85)); }
     .card__heading-span--3 {
       background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85)); }
   .card__details ul {
@@ -979,7 +979,7 @@ body {
       width: 100%; } }
   .form__input:focus {
     outline: none;
-    border-bottom: 3px solid #c70c0c;
+    border-bottom: 3px solid #f70f50;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.5); }
   .form__input:focus:invalid {
     border-bottom: 3px solid #28b485; }
@@ -1019,7 +1019,7 @@ body {
 .form__radio-button {
   width: 3rem;
   height: 3rem;
-  border: 5px solid #c70c0c;
+  border: 5px solid #f70f50;
   border-radius: 50%;
   display: inline-block;
   position: absolute;
@@ -1035,7 +1035,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #c70c0c;
+    background-color: #f70f50;
     opacity: 0;
     transition: opacity .2s; }
 
@@ -1148,10 +1148,10 @@ body {
     transition: all .3s;
     line-height: 1rem; }
   .popup__close:hover {
-    color: #6b0e01;
+    color: #ad0945;
     transform: translateY(-0.4rem); }
   .popup__close:active {
-    color: #6b0e01;
+    color: #ad0945;
     transform: translateY(0.4rem); }
 
 .row {
@@ -1225,7 +1225,7 @@ body {
   position: fixed;
   top: 6.5rem;
   right: 6.5rem;
-  background-image: radial-gradient(#f39b84, #6b0e01);
+  background-image: radial-gradient(#ff7b9c, #ad0945);
   z-index: 1000;
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
   @media (max-width: 56.25em) {
@@ -1273,7 +1273,7 @@ body {
 
 .navigation__link:hover, .navigation__link:active {
   background-position: 100%;
-  color: #6b0e01;
+  color: #ad0945;
   transform: translateX(1rem); }
 
 .navigation__checkbox:checked ~ .navigation__background {
@@ -1320,7 +1320,7 @@ body {
 
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(243, 155, 132, 0.8), rgba(107, 14, 1, 0.8)), url(../img/hero-small.jpg);
+  background-image: linear-gradient(to right bottom, rgba(255, 123, 156, 0.8), rgba(173, 9, 69, 0.8)), url(../img/hero-small.jpg);
   background-size: cover;
   background-position: top;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
@@ -1328,7 +1328,7 @@ body {
   position: relative; }
   @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em), (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), (min-width: 125em) {
     .header {
-      background-image: linear-gradient(to right bottom, rgba(243, 155, 132, 0.8), rgba(107, 14, 1, 0.8)), url(../img/hero.jpg); } }
+      background-image: linear-gradient(to right bottom, rgba(255, 123, 156, 0.8), rgba(173, 9, 69, 0.8)), url(../img/hero.jpg); } }
   @media (max-width: 37.5em) {
     .header {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
@@ -1385,7 +1385,7 @@ body {
     text-transform: uppercase;
     transition: all .3s; }
   .footer__link:hover, .footer__link:active {
-    color: #f39b84;
+    color: #ff7b9c;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
     transform: rotate(5deg) scale(1.3); }
   .footer__copyright {
@@ -1410,7 +1410,7 @@ body {
 
 .section-features {
   padding: 20rem 0;
-  background-image: linear-gradient(to right bottom, rgba(243, 155, 132, 0.8), rgba(107, 14, 1, 0.8)), url(/img/nat-4.jpg);
+  background-image: linear-gradient(to right bottom, rgba(255, 123, 156, 0.8), rgba(173, 9, 69, 0.8)), url(/img/nat-4.jpg);
   background-size: cover;
   transform: skewY(-7deg);
   margin-top: -10rem; }
@@ -1418,7 +1418,7 @@ body {
     transform: skewY(7deg); }
   @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
     .section-features {
-      background-image: linear-gradient(to right bottom, rgba(243, 155, 132, 0.8), rgba(107, 14, 1, 0.8)), url(../img/hero.jpg); } }
+      background-image: linear-gradient(to right bottom, rgba(255, 123, 156, 0.8), rgba(173, 9, 69, 0.8)), url(../img/hero.jpg); } }
   @media (max-width: 56.25em) {
     .section-features {
       padding: 10rem 0; } }
@@ -1440,7 +1440,7 @@ body {
 
 .section-book {
   padding: 15rem 0;
-  background-image: linear-gradient(to right bottom, #f39b84, #6b0e01); }
+  background-image: linear-gradient(to right bottom, #ff7b9c, #ad0945); }
   @media (max-width: 56.25em) {
     .section-book {
       padding: 10rem 0; } }
